--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,14 @@ services:
     volumes:
       - .:/work
 
+  nginx:
+    build: ./docker/nginx
+    ports:
+      - 8080:80
+    volumes:
+      - .:/work
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+
   mysql:
     image: mysql:8.0.21
     environment:
